--- a/Relógio Luxuoso/style.css
+++ b/Relógio Luxuoso/style.css
@@ -64,6 +64,7 @@ header ul li a:hover{
 header .logo h1{
     font-size: 45px;
     color: #e8c573;
+    padding-left: 5%;
 }
 
 header .logo h1 span{
