--- a/Calculadora de IMC/style.css
+++ b/Calculadora de IMC/style.css
@@ -1,8 +1,8 @@
-body{
-    background: linear-gradient(56deg, rgba(0,0,0,1) 1%, rgba(255,198,0,1) 100%);
+body {
+    background: linear-gradient(56deg, rgba(0, 0, 0, 1) 1%, rgba(255, 198, 0, 1) 100%);
 }
 
-main{
+main {
     display: flex;
     width: 100vw;
     height: 50vw;
@@ -10,7 +10,7 @@ main{
     align-items: center;
 }
 
-.conteiner{
+.conteiner {
     display: flex;
     flex-direction: column;
     background: #ffc600;
@@ -22,7 +22,7 @@ main{
     box-shadow: 0 0 10px #000000;
 }
 
-.title{
+.title {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,7 +33,7 @@ main{
     margin-bottom: 20px;
 }
 
-.input{
+.input {
     display: flex;
     width: 300px;
     height: 50px;
@@ -41,7 +41,7 @@ main{
     align-items: center;
 }
 
-.input input{
+.input input {
     width: 200px;
     height: 50px;
     border-radius: 5px;
@@ -51,29 +51,29 @@ main{
     text-align: center;
 }
 
-.input label{
+.input label {
     font: bold 1.5rem serif;
 }
 
-button{
+button {
     width: 300px;
     height: 40px;
     font: bold 1.2rem serif;
     background-color: rgb(0, 0, 0);
-    color:rgb(255, 198, 0);
+    color: rgb(255, 198, 0);
     outline: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
-.result{
+.result {
     display: flex;
     margin-top: 20px;
     align-items: center;
     width: 300px;
     height: 150px;
     border-radius: 5px;
-    font: italic 1,5rem serif;
+    font: italic 1, 5rem serif;
     box-shadow: 0px 0px 10px black;
     background: black;
     color: rgb(255, 198, 0);
