--- a/Lâmpada/Lampada-style.css
+++ b/Lâmpada/Lampada-style.css
@@ -4,10 +4,25 @@ body{
     background-color:  #afcfe046;
 }
 
-header, main{
+header, main, p{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.lista{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+ol{
+    border: 2px solid red;
+    border-radius: 10px;
+}
+
+.lista-passos li{
+    letter-spacing: 1px;
 }
 
 #lampa{
